--- a/index.html
+++ b/index.html
@@ -664,9 +664,10 @@ textarea {
   <h2 class="w3-wide w3-center">CONTACT ME</h2>
   <div class="col-sm-12 contct">
         <div class="col-sm-10">
-            <p class="paras">Johannesburg, RSA | Phone:+27 620 798 157</p><br>
-            <p class="paras">First Email: <a href="mailto:busisiwe.mhlotshazana@umuzi.org">busisiwe.mhlotshazana@umuzi.org</a></p> <br>
-            <p class="paras">Second Email: <a href="mailto:busisiwemhlotshazana21@gmail.com">busisiwemhlotshazana21@gmail.com</a></p>
+            <p class="paras"><i class="fa fa-map-marker"></i> Johannesburg, RSA</p><br>
+            <p class="paras"><i class="fa fa-phone"></i> Phone:+27 620 798 157</p><br>
+            <p class="paras"><i class="fa fa-envelope"></i> First Email: <a href="mailto:busisiwe.mhlotshazana@umuzi.org">busisiwe.mhlotshazana@umuzi.org</a></p> <br>
+            <p class="paras"><i class="fa fa-envelope"></i> Second Email: <a href="mailto:busisiwemhlotshazana21@gmail.com">busisiwemhlotshazana21@gmail.com</a></p>
             <p class="resume">If you think I can add value to your company, please check my <a href="https://drive.google.com/file/d/0BxcO6Nbb1FPrY21QNi12VUgtanNia0tUWnBpaEZadW04WkpB/view?usp=sharing" target="_blank">Resume</a></p>
         </div>
 
